# advanced_mcp

./: .gitignore  README.md  pyproject.toml
api/: article_generator.py  main.py  mcp_client.py  mcp_server.py
front/: package-lock.json  package.json  tsconfig.json
front/src/: frontend.tsx  main.tsx
front/src/components/ui/: button.tsx  card.tsx  textarea.tsx
